src/main/kotlin/com/example/highthon/global/config/error/exception/InvalidTokenException.kt
package com.example.highthon.global.config.error.exception

import com.example.highthon.global.config.error.data.ErrorCode


object InvalidTokenException: BusinessException(ErrorCode.INVALID_TOKEN)
